--- a/MenuBarTest/searchMenu/index.html
+++ b/MenuBarTest/searchMenu/index.html
@@ -1,30 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search menu</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-    
-    <input type="text" id="mySearch" onkeyup="myFunc()" placeholder="Search.." title="Type in a category" />
 
-    <ul id="menuBar">
+    <div class="menu">
+        <h3>Menu</h3>
+        <input type="text" id="mySearch" onkeyup="myFunc()" placeholder="Search.." title="Type in a category" />
 
-        <li><a href="#">HTML</a></li>
-        <li><a href="#">CSS</a></li>
-        <li><a href="#">Javascript</a></li>
-        <li><a href="#">PHP</a></li>
-        <li><a href="#">Python</a></li>
-        <li><a href="#">jQuery</a></li>
-        <li><a href="#">SQL</a></li>
-        <li><a href="#">Bootstrap</a></li>
-        <li><a href="#">Node.js</a></li>
+        <ul id="menuBar">
 
-    </ul>
+            <li><a href="#" onclick="changeContentToVisible(this, 'HTML')">HTML</a></li>
+            <li><a href="#" onclick="changeContentToVisible(this, 'CSS')">CSS</a></li>
+            <li><a href="#" onclick="changeContentToVisible(this, 'Javascript')">Javascript</a></li>
+            <li><a href="#" onclick="changeContentToVisible(this, 'PHP')">PHP</a></li>
+            <li><a href="#" onclick="changeContentToVisible(this, 'Python')">Python</a></li>
+            <li><a href="#" onclick="changeContentToVisible(this, 'jQuery')">jQuery</a></li>
+            <li><a href="#" onclick="changeContentToVisible(this, 'SQL')">SQL</a></li>
+            <li><a href="#" onclick="changeContentToVisible(this, 'Bootstrap')">Bootstrap</a></li>
+            <li><a href="#" onclick="changeContentToVisible(this, 'NodeJs')">Node.js</a></li>
 
+        </ul>
+    </div>
+
+    <div id="HTML" class="content">
+        <p> Hi, i am HTML.</p>
+    </div>
+
+    <div id="CSS" class="content">
+        <p> Hi, i am CSS.</p>
+    </div>
+
+    <div id="Javascript" class="content">
+        <p> Hi, i am Javascript.</p>
+    </div>
+
+    <div id="PHP" class="content">
+        <p> Hi, i am PHP.</p>
+    </div>
+
+    <div id="Python" class="content">
+        <p> Hi, i am Python.</p>
+    </div>
+
+    <div id="jQuery" class="content">
+        <p> Hi, i am jQuery.</p>
+    </div>
+
+    <div id="SQL" class="content">
+        <p> Hi, i am SQL.</p>
+    </div>
+
+    <div id="Bootstrap" class="content">
+        <p> Hi, i am Bootstrap.</p>
+    </div>
+
+    <div id="NodeJs" class="content">
+        <p> Hi, i am Node.js.</p>
+    </div>
 
     <script src="app.js"></script>
 </body>
+
 </html>
