--- a/MenuBarTest/sideNavigation/sideNav01/index.html
+++ b/MenuBarTest/sideNavigation/sideNav01/index.html
@@ -16,7 +16,7 @@
         <a href="#">Contact</a>
     </div>
 
-    <span onclick="openNav()">open</span>
+    <span id="openNavBar" onclick="openNav()">open</span>
 
     <div class="main">
         <h1>Full Sidebar</h1>
